--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <router-outlet></router-outlet>
-<p>{{statistique1.libelle}}</p>
-<p>{{statistique2.libelle}}</p>
+<app-statistique [statistique]="statistique1"></app-statistique>
+<app-statistique [statistique]="statistique2"></app-statistique>
+
