--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <router-outlet></router-outlet>
 <div *ngFor="let s of statistiqueService.statistiques">
   <app-statistique [statistique]="s"></app-statistique>
+  <button (click)="removeStatistique(s)">Supprimer</button>
 </div>
 
 
